<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>rbccucumber</groupId>
  <artifactId>RBCCucumberBDD</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.11.0</version>
		</dependency>
		<!--<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.0.1-jre</version>
		</dependency>-->
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>7.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-testng</artifactId>
			<version>7.5.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
		<!--<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.9</version>
		</dependency>-->
		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.2.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.3</version>
		</dependency>
		<!--<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.1.1</version>
		</dependency>-->
		<dependency>
			  <groupId>org.seleniumhq.selenium</groupId>
			  <artifactId>selenium-http-jdk-client</artifactId>
			  <version>4.8.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.3</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
		  <!-- Cucumber Reporting Plugin -->
	    <!--<dependency>
	        <groupId>net.masterthought</groupId>
	        <artifactId>cucumber-reporting</artifactId>
	        <version>5.6.0</version>
	        <scope>test</scope>
	    </dependency>-->
		<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
		<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
<dependency>
    <groupId>tech.grasshopper</groupId>
    <artifactId>extentreports-cucumber7-adapter</artifactId>
    <version>1.14.0</version>
</dependency>

		
	<!--<dependency>
		<groupId>com.vimalselvam</groupId>
		<artifactId>cucumber-extentsreport</artifactId>
		<version>3.0.2</version>
	</dependency>
	
	<dependency>
		<groupId>com.aventstack</groupId>
		<artifactId>extentreports</artifactId>
		<version>3.1.2</version>
	</dependency>-->

	</dependencies>
	<profiles>
		<profile>
			<id>Regression</id>
			<build>
				<pluginManagement>
					<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>3.0.0-M6</version>
							<configuration>
								<suiteXmlFiles>
									<suiteXmlFile>testSuites/testng.xml</suiteXmlFile>
								</suiteXmlFiles>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>Purchase</id>
			<build>
				<pluginManagement>
					<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>3.0.0-M6</version>
							<configuration>
								<suiteXmlFiles>
									<suiteXmlFile>testSuites/Purchase.xml</suiteXmlFile>
								</suiteXmlFiles>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>CucumberTests</id>
			<build>
				<pluginManagement>
					<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							
							<version>3.0.0-M6</version>
							<configuration>
								<includes>
									<include>**/TestNGTestRunner.java</include>
								</includes>
								<parallel>methods</parallel>
								<threadCount>4</threadCount>
								<perCoreThreadCount>true</perCoreThreadCount>
							</configuration>
						</plugin>
						
						<plugin>
				            <groupId>net.masterthought</groupId>
				            <artifactId>maven-cucumber-reporting</artifactId>
				            <version>5.5.4</version>
				            <executions>
				                <execution>
				                    <id>execution</id>
				                    <phase>verify</phase>
				                    <goals>
				                        <goal>generate</goal>
				                    </goals>
				                    <configuration>
				                        <projectName>Cucumberreports</projectName>
				                        <!-- optional, per documentation set this to "true" to bypass generation of Cucumber Reports entirely, defaults to false if not specified -->
				                        <skip>false</skip>
				                        <!-- output directory for the generated report -->
				                        <outputDirectory>target/cucumber-reports/advanced-reports</outputDirectory>
				                        <!-- optional, defaults to outputDirectory if not specified -->
				                        <inputDirectory>target/cucumber-reports/cucumber.json</inputDirectory>
				                        <jsonFiles>
				                            <!-- supports wildcard or name pattern -->
				                            <param>**/*.json</param>
				                        </jsonFiles>
				                        <!-- optional, defaults to outputDirectory if not specified -->
				                        <classificationDirectory>target/cucumber-reports</classificationDirectory>
				                        <classificationFiles>
				                                <!-- supports wildcard or name pattern -->
				                                <param>sample.properties</param>
				                                <param>other.properties</param>
				                        </classificationFiles>
				                        
				                        <!-- optional, set true to group features by its Ids -->
				                        <mergeFeaturesById>false</mergeFeaturesById>
				                        <!-- optional, set true to get a final report with latest results of the same test from different test runs -->
				                        <mergeFeaturesWithRetest>false</mergeFeaturesWithRetest>
				                        <!-- optional, set true to fail build on test failures -->
				                        <checkBuildResult>false</checkBuildResult>
				                    </configuration>
				                </execution>
				            </executions>
				        </plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>ErrorValidation</id>
			<build>
				<pluginManagement>
					<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>3.0.0-M6</version>
							<configuration>
								<suiteXmlFiles>
									<suiteXmlFile>testSuites/ErrorValidationTests.xml</suiteXmlFile>
								</suiteXmlFiles>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
	
	<build>
		<pluginManagement>
			<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
			<plugins>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M6</version>
					<configuration>
						<suiteXmlFiles>
							<suiteXmlFile>testSuites/testng.xml</suiteXmlFile>
						</suiteXmlFiles>
					</configuration>
				</plugin>
				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<!--<source>16</source>
						<target>16</target>-->
						<source>1.8</source>
						<target>1.8</target>
						<fork>true</fork>
						<compilerArgs>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>1.18.16</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				
				<plugin>
		            <groupId>org.apache.maven.plugins</groupId>
		            <artifactId>maven-failsafe-plugin</artifactId>
		            <version>3.0.0-M5</version>
		            <executions>
		                <execution>
		                    <goals>
		                        <goal>integration-test</goal>
		                        <goal>verify</goal>
		                    </goals>
		                </execution>
		            </executions>
		            <configuration>
						<includes>
							<include>**/TestNGTestRunner.java</include>
						</includes>
						<parallel>methods</parallel>
						<threadCount>4</threadCount>
						<perCoreThreadCount>true</perCoreThreadCount>
					</configuration>
       			 </plugin>
        	  
				
			</plugins>
		</pluginManagement>
	</build>
</project>